--- a/package.json
+++ b/package.json
@@ -9,16 +9,26 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.20",
     "register-service-worker": "^1.7.1",
-    "vue": "^2.6.11",
+    "v-mask": "^2.2.3",
+    "vue": "^2.6.12",
+    "vuex": "^3.4.0",
+    "vuetify": "^2.3.10",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vue-class-component": "^7.2.6",
+    "vue-property-decorator": "^9.0.0",
+    "vuex-module-decorators": "^1.0.1"
   },
   "devDependencies": {
+    "@mdi/font": "^5.6.55",
     "@types/jest": "^24.0.19",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@types/core-js": "^2.5.4",
+    "@types/lodash": "^4.14.161",
     "@typescript-eslint/parser": "^2.33.0",
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-pwa": "~4.5.0",
@@ -31,12 +41,14 @@
     "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "^1.0.3",
     "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "eslint-plugin-prettier": "^3.1.3",
     "prettier": "^1.19.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "typescript": "~3.9.3",
-    "vue-template-compiler": "^2.6.11"
+    "vuetify-loader": "^1.3.0",
+    "vue-template-compiler": "^2.6.11",
+    "vue-cli-plugin-vuetify": "^2.0.7"
   }
 }
