--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
+    "test": "vue-cli-service test:unit",
+    "test:watch": "vue-cli-service test:unit --watch",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -15,20 +16,20 @@
     "register-service-worker": "^1.7.1",
     "v-mask": "^2.2.3",
     "vue": "^2.6.12",
-    "vuex": "^3.4.0",
-    "vuetify": "^2.3.10",
-    "vue-router": "^3.2.0",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.0.0",
+    "vue-router": "^3.2.0",
+    "vuetify": "^2.3.10",
+    "vuex": "^3.4.0",
     "vuex-module-decorators": "^1.0.1"
   },
   "devDependencies": {
     "@mdi/font": "^5.6.55",
-    "@types/jest": "^24.0.19",
     "@types/core-js": "^2.5.4",
+    "@types/jest": "^24.0.19",
     "@types/lodash": "^4.14.161",
-    "@typescript-eslint/parser": "^2.33.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-pwa": "~4.5.0",
@@ -41,14 +42,15 @@
     "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "^1.0.3",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
     "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-vue": "^6.2.2",
+    "jest-localstorage-mock": "^2.4.3",
     "prettier": "^1.19.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "typescript": "~3.9.3",
-    "vuetify-loader": "^1.3.0",
+    "vue-cli-plugin-vuetify": "^2.0.7",
     "vue-template-compiler": "^2.6.11",
-    "vue-cli-plugin-vuetify": "^2.0.7"
+    "vuetify-loader": "^1.3.0"
   }
 }
