--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/dropzone": "^5.7.0",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "lodash": "^4.17.20",
@@ -20,6 +21,7 @@
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.0.0",
     "vue-router": "^3.2.0",
+    "vue2-dropzone": "^3.6.0",
     "vuetify": "^2.3.10",
     "vuex": "^3.4.0",
     "vuex-module-decorators": "^1.0.1"
