--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "vue-router": "^3.2.0",
     "vuetify": "^2.3.10",
     "vuex": "^3.4.0",
-    "vuex-module-decorators": "^1.0.1"
+    "vuex-module-decorators": "^1.0.1",
+    "vuex-persistedstate": "^4.0.0-beta.1"
   },
   "devDependencies": {
     "@mdi/font": "^5.6.55",
@@ -52,6 +53,6 @@
     "typescript": "~3.9.3",
     "vue-cli-plugin-vuetify": "^2.0.7",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0"
+    "vuetify-loader": "^1.4.2"
   }
 }
