--- a/package.json
+++ b/package.json
@@ -52,7 +52,6 @@
     "sass-loader": "^8.0.2",
     "typescript": "~3.9.3",
     "vue-cli-plugin-vuetify": "^2.0.7",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.4.2"
+    "vue-template-compiler": "^2.6.11"
   }
 }
