--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/validator": "^13.1.1",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "lodash": "^4.17.20",
     "register-service-worker": "^1.7.1",
     "v-mask": "^2.2.3",
+    "validator": "^13.5.1",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.0.0",
