--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.0.0",
     "vue-router": "^3.2.0",
+    "vue-toasted": "^1.1.28",
     "vuetify": "^2.3.10",
     "vuex": "^3.4.0",
     "vuex-module-decorators": "^1.0.1",
