--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "postinstall": "npm run build",
     "start": "node server.js",
     "installclean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run dev"
-
   },
   "dependencies": {
     "@types/validator": "^13.1.1",
     "axios": "^0.20.0",
+    "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
     "lodash": "^4.17.20",
