--- a/package.json
+++ b/package.json
@@ -60,5 +60,9 @@
     "typescript": "~3.9.3",
     "vue-cli-plugin-vuetify": "^2.0.7",
     "vue-template-compiler": "^2.6.11"
+  },
+  "engines": {
+    "node": "14.x",
+    "npm": "6.x"
   }
 }
