--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "test:watch": "vue-cli-service test:unit --watch",
     "lint": "vue-cli-service lint",
     "postinstall": "npm run build",
-    "start": "node server.js",
-    "installclean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run dev"
+    "start": "node server.js"
   },
   "dependencies": {
     "@types/validator": "^13.1.1",
